--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,11 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
-    "@mui/x-data-grid": "^7.23.0",
+    "@mui/x-data-grid": "^5.17.13",
     "@nivo/bar": "^0.88.0",
     "@nivo/core": "^0.88.0",
     "@nivo/geo": "^0.88.0",
+    "@nivo/line": "^0.88.0",
     "@nivo/pie": "^0.88.0",
     "@reduxjs/toolkit": "^2.4.0",
     "@testing-library/jest-dom": "^5.17.0",
